Time for cleanup

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,25 +1,12 @@
-name: PlayerWarpGUI
-version: 1.3.4
+name: pWarps
+version: 0.1
 description: PlayerWarpGUI
 author: judgetread
 authors: [judgetread] 
 website: http://thelasthero.net
 main: PlayerWarpGUI.PlayerWarpGUI
-softdepend: [GriefPrevention, worldguard, WorldGuard, RedProtect, Vault]
+softdepend: [GriefPrevention, worldguard, WorldGuard, RedProtect, Vault, Residence, Factions, MassiveCore]
 commands:
-  playerwarps:
+  pwarps:
     description: Set and go to player warps.
-    aliases: [pwarps, pwarp, playerwarp]
-permissions:
-  playerwarpgui.set:
-    description: Allows the player to set a warp
-    default: op
-  playerwarpgui.list:
-    description: Allows the player list there warps
-    default: op
-  playerwarpgui.show:
-    description: Allows the player view warps gui
-    default: op
-  playerwarpgui.title:
-    description: Allows the player to set a title for there warp
-    default: op
+    aliases: [pwarp]
