--- a/config.yml
+++ b/config.yml
@@ -80,7 +80,12 @@ Factions:
  in-own-territory-can-set-warp: true
  in-wilderness-can-set-warp: false
  delete-warps-if-zone-is-deleted: true
+ 
+# Essentials
+Essentials:
+ enabled: false
+ use-back-command: false
 
 # Config.yml compatability version. 
 # DO NOT MODIFY
-config-version: 1.1
+config-version: 1.0
