--- a/locale.properties
+++ b/locale.properties
@@ -9,7 +9,7 @@ COMMAND_NO_PERMISSION=&cNo permission for command >>&3 {0}
 COMMAND_USE_INVALID=&6Invalid usage&f>> 
 COMMAND_USE_TOOMANY=&3opps, too many arguments &3:()
 COMMAND_USE_SHOW=&3/pwarp show
-COMMAND_USE_LIST=&3/pwarp list
+COMMAND_USE_LIST=&3/pwarp list | /pwarp list <warpname>
 COMMAND_USE_ICON=&3/pwarp seticon <warp name>
 COMMAND_USE_SET=&3/pwarp setwarp <warp name>
 COMMAND_USE_DELETE=&3/pwarp deletewarp <warp name>
