--- a/locale.properties
+++ b/locale.properties
@@ -1,5 +1,5 @@
 #Prefix that is displayed when a message is send to a player
-MESSAGE_PREFIX=&b[&3pWarps&b] 
+MESSAGE_PREFIX=&b[&3playerwarpsgui&b] 
 
 #---------------------------------------------------------
 # COMMANDS USES
@@ -21,7 +21,7 @@ COMMAND_USE_LANGUAGE_RELOAD=&3/pwarp langreload
 #---------------------------------------------------------
 # LIST COMMAND
 #---------------------------------------------------------
-COMMAND_LIST_WARPS_TITLE=&3|------&b<&e Your pWarps &b>&3------|
+COMMAND_LIST_WARPS_TITLE=&3|------&b<&e Your playerwarpsgui &b>&3------|
 COMMAND_LIST_WARP=&6Warp&7>>&e{1} &7- &6world&7>>&b{2} &6x&7>>&b{3} &6y&7>>&b{4} &6z&7>>&b{5}
 COMMAND_LIST_WARPS_DETAILS_TITLE=&3|------&b<&6 pWarp &f>> &e{0} &6 details &b>&3------|
 COMMAND_LIST_WARP_TITLE=&6Title&f>> &b{0}
@@ -31,7 +31,7 @@ COMMAND_LIST_WARP_LORE_MAIN=&6Lore&f>>
 COMMAND_LIST_WARP_LORE=\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020&3lore{1}&f>> &b{0}
 COMMAND_LIST_WARP_BAN_MAIN=&6Bans&f>>
 COMMAND_LIST_WARP_BAN=\u0020\u0020\u0020\u0020\u0020\u0020\u0020\u0020&b{0}
-COMMAND_LIST_NONE_TEXT=&cYou don't have any pWarps set.
+COMMAND_LIST_NONE_TEXT=&cYou don't have any playerwarpsgui set.
 
 #---------------------------------------------------------
 # SET COMMAND
@@ -40,7 +40,7 @@ COMMAND_SET_COMPLETED_TEXT=&3Warp &b{0} &3has been set.
 COMMAND_SET_ENOUGH_MONEY=&3{0} &bhas been withdrawn as cost of setting pWarp.
 COMMAND_SET_NOT_ENOUGH_MONEY=&cYou dont have enough money to set this pWarp.
 COMMAND_SET_ALLREADY_EXSISTS_TEXT=&cA pWarp named &3{0} &3already exists.
-COMMAND_SET_MAX_ALLOWED_TEXT=&cYou are not allowed to set more than &3{0} &cpWarps. 
+COMMAND_SET_MAX_ALLOWED_TEXT=&cYou are not allowed to set more than &3{0} &cplayerwarpsgui. 
 COMMAND_SET_CANCEL_UNSAFE_LOCATION=&cWarp &3{0} &cset cancelled, unsafe location to set pWarp at.
 COMMAND_SET_CANCEL_WORLD_BLOCKED=&cWarp &3{0} &cset cancelled, Not allowed to set pWarp in this world.. 
 
@@ -89,35 +89,35 @@ TELEPORT_COUNTDOWN=&3Teleporting in: &b{0}
 # GRIEFPREVENTION
 #---------------------------------------------------------
 GRIEFPREVENTION_NO_PERMISSION=&cNo Permission in gp
-GRIEFPREVENTION_NOT_IN_A_CLAIM=&cpWarps can only be in claims.
+GRIEFPREVENTION_NOT_IN_A_CLAIM=&cplayerwarpsgui can only be in claims.
 GRIEFPREVENTION_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a claim been removed.
 
 #---------------------------------------------------------
 # WORLDGUARD
 #---------------------------------------------------------
 WORLDGUARD_NO_PERMISSION=&cNo Permission in WG
-WORLGUARD_NOT_IN_A_REGION=&cpWarps can only be in regions.
+WORLGUARD_NOT_IN_A_REGION=&cplayerwarpsgui can only be in regions.
 GRIEFPREVENTION_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a claim been removed.
 
 #---------------------------------------------------------
 # REDPROTECT
 #---------------------------------------------------------
 REDPROTECT_NO_PERMISSION=&cNo Permission in WG
-REDPROTECT_NOT_IN_A_REGION=&cpWarps can only be in regions.
+REDPROTECT_NOT_IN_A_REGION=&cplayerwarpsgui can only be in regions.
 REDPROTECT_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a region been removed.
 
 #---------------------------------------------------------
 # RESIDENCE
 #---------------------------------------------------------
 RESIDENCE_NO_PERMISSION=&cNo Permission in RS
-RESIDENCE_NOT_IN_A_REGION=&cpWarps can only be in residence regions.
+RESIDENCE_NOT_IN_A_REGION=&cplayerwarpsgui can only be in residence regions.
 RESIDENCE_CLAIM_DELETED=&cYour pWarp &b{0} &chas been deleted, due to a region been removed.
 
 #---------------------------------------------------------
 # FACTIONS
 #---------------------------------------------------------
 FACTIONS_NO_PERMISSION=No Permission in Factions.
-FACTIONS_NOT_IN_A_REGION=pWarps can only be in faction regions.
+FACTIONS_NOT_IN_A_REGION=playerwarpsgui can only be in faction regions.
 FACTIONS_CLAIM_DELETED=your pWarp {0} has been deleted, due to a region been removed.
 
 #---------------------------------------------------------
@@ -132,16 +132,17 @@ WARP_OWNER_TEXT=&3Warp Owner: &b
 #---------------------------------------------------------
 CONSOLE_MSG_COMMAND_ERROR=&7Cannot run command >> /&b{0} &7from console
 CONSOLE_MSG_METRICS=Starting Materics >> &b{0}
-CONSOLE_MSG_HOOK=Hooking &b{0} &7>> &b{1}
+CONSOLE_MSG_HOOK=Hooking &b{0} &7>> {1}
 CONSOLE_MSG_LANGUAGE_FILE=Loaded language file >> &a{0}
 CONSOLE_MSG_CONFIG_FILE=Loaded config file >> &a{0}
 CONSOLE_MSG_WARPFILE_COUNT=Loaded player warps files >> &a{0}
 CONSOLE_MSG_WARPS_COUNT=Loaded player warps >> &a{0}
-CONSOLE_MSG_PREFIX=&7[&bpWarpsAAAAA&7] 
+CONSOLE_MSG_PREFIX=&7[&bPlayerWarpsGUI&7] 
 CONSOLE_MSG_FINAL=&aPlayerWarpGUI v.{0} >> {1}
 CONSOLE_MSG_CRITIAL_ERROR_PREFIX=&c[CRITICAL ERROR] 
 CONSOLE_MSG_NONCRITIAL_ERROR_PREFIX=&c[NON CRITICAL ERROR] 
 CONSOLE_MSG_CREATE_FOLDER=Creating warps directory >> &a\{0} 
+CONSOLE_MSG_CREATE_CONFIG=Creating config directory >> &a\{0} 
 CONSOLE_ERROR_CRITIAL_FILENOTFOUND=Failed to load file >> {0}
 CONSOLE_NONCRITIAL_ERROR=Materics failed to start >> {0}
 CONSOLE_NONCRITIAL_ERROR_HOOK=&b{0} &cwas not found. Disabling &b{0} &csupport.
